# tickets-app-backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  cli.py  docker-compose.yml  example_data.json  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 2023-06-20_create_user_model.py  2023-06-25_create_password_reset_token.py  2023-08-04_create_event_related_models.py  2023-08-06_add_slug_field_to_event_related_models.py  2023-08-06_create_organizer_model.py  2023-08-08_add_missing_constraints.py  2023-08-31_create_ticket_models.py  2023-09-10_add_verification_token.py  2023-09-14_add_is_active_field_to_event.py  2024-01-18_remove_index_from_ticket_category_name.py
app/: logging.py  main.py  router.py
app/admin_panel/: admin.py  auth.py  fields.py  widgets.py
app/admin_panel/templates/: create.html  edit.html
app/admin_panel/views/: __init__.py  auth.py  core.py  events.py  registry.py  tickets.py
app/auth/: deps.py  emails.py  exceptions.py  models.py  security.py  utils.py
app/auth/api/v1/: router.py
app/auth/api/v1/endpoints/: login.py  password_reset.py  users.py  verify_account.py
app/auth/crud/: __init__.py  crud_password_reset.py  crud_user.py  crud_verification_token.py  password_reset.py  user.py
app/auth/models/: __init__.py  password_reset.py  user.py
app/auth/schemas/: __init__.py  password_reset.py  user.py  verification_token.py
app/common/: crud.py  deps.py  emails.py  exceptions.py  filters.py  models.py  schemas.py  storage.py  utils.py
app/core/: config.py  settings.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/email-templates/auth/: new_user.html
app/email_templates/auth/: new_user.html  reset_password.html
app/events/: deps.py  exceptions.py  filters.py  models.py
app/events/api/v1/: router.py
app/events/api/v1/endpoints/: artists.py  event_types.py  events.py  locations.py  speakers.py
app/events/crud/: __init__.py  artist.py  crud_event.py  crud_event_type.py  crud_location.py  crud_speaker.py  event.py  event_type.py
app/events/schemas/: __init__.py  artist.py  event.py  event_type.py  location.py  organizer.py  speaker.py
app/tests/: conftest.py
app/tests/auth/api/: test_login.py  test_users.py
app/tests/auth/crud/: test_password_reset.py  test_user.py
app/tests/common/: test_deps.py  test_emails.py
app/tests/core/: test_config.py
app/tests/events/: conftest.py
app/tests/events/api/: test_event_types.py  test_events.py
app/tests/events/crud/: test_artist.py  test_event.py  test_event_type.py  test_location.py  test_organizer.py
app/tests/integration/: conftest.py
app/tests/integration/auth/api/: test_login.py  test_password_reset.py  test_users.py  test_verify_account.py
app/tests/integration/auth/crud/: test_password_reset.py  test_user.py  test_verification_token.py
app/tests/integration/common/: test_deps.py
app/tests/integration/db/: test_db.py
app/tests/integration/events/: conftest.py
app/tests/integration/events/api/: test_artists.py  test_event_types.py  test_events.py  test_locations.py  test_speakers.py
app/tests/integration/events/crud/: test_artist.py  test_event.py  test_event_type.py  test_location.py  test_speaker.py
app/tests/integration/test_db_config/: setup_db.py
app/tests/integration/tickets/: conftest.py
app/tests/integration/tickets/api/: test_ticket_categories.py  test_tickets.py
app/tests/integration/tickets/crud/: test_ticket.py  test_ticket_category.py
app/tests/test_db/: initial_data.py  session.py  setup_db.py
app/tests/test_db_config/: setup_db.py
app/tests/unit/: conftest.py  test_db.py  test_logging.py  utils.py
app/tests/unit/admin_panel/: conftest.py  test_admin.py  test_auth.py  test_views.py  test_widgets.py
app/tests/unit/auth/: test_deps.py  test_models.py  test_security.py  test_utils.py
app/tests/unit/auth/crud/: test_password_reset.py  test_user.py  test_verification_token.py
app/tests/unit/common/: conftest.py  test_crud.py  test_deps.py  test_emails.py  test_filters.py  test_utils.py
app/tests/unit/core/: test_config.py
app/tests/unit/events/: test_models.py
app/tests/unit/events/crud/: test_event.py  test_event_type.py
app/tests/unit/tickets/: test_deps.py  test_models.py
app/tests/unit/tickets/crud/: test_ticket.py
app/tests/utils/: users.py
app/tickets/: deps.py  exceptions.py  models.py
app/tickets/api/v1/: router.py
app/tickets/api/v1/endpoints/: ticket_categories.py  tickets.py
app/tickets/crud/: __init__.py  crud_ticket.py  crud_ticket_category.py
app/tickets/schemas/: __init__.py  ticket.py  ticket_category.py
src/: main.py
