[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.coverage.report]
exclude_lines = [
  "def __repr__",
  "if 0:",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "nocov",
  "pass",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError"
]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
omit = [
  "tests/*"
]

[tool.isort]
combine_as_imports = "true"
include_trailing_comma = "true"
known_first_party = ["src"]
line_length = 120
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlmypy"]
python_version = "3.10"
warn_unused_configs = true

[tool.poetry]
authors = ["Dominik <dominik.szlaza@gazeta.pl>"]
description = ""
name = "survey app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.11.1"
fastapi = "^0.95.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.9"}
python = "^3.10"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
sqlalchemy-stubs = "^0.4"
toml-sort = "^0.23.1"

[tool.pylint.BASIC]
good-names = "id,i,j,k,db"

[tool.pylint.DESIGN]
max-args = 5
max-attributes = 8
min-public-methods = 1

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-docstring, logging-fstring-interpolation, too-few-public-methods"

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = 6

[tool.pytest.ini_options]
addopts = "-v --cov=app --cov-report term-missing --no-cov-on-fail"
testpaths = ["app/tests"]
